# recalc

./: .ghci  .gitignore  .hlint.yaml  .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  README.md  cabal.project  flake.nix  fourmolu.yaml  haskell-overlay.nix  index.html  mkdocs.yaml  recalc.cabal  static-haskell.nix  style.css  versions.nix
.github/workflows/: gh-pages.yaml  nix-build.yaml  nix-check.yaml  nix-publish.yaml
backend/: index.html
core/: index.html
development/: index.html
docs/: backend.md  build.md  core.md  development.md  frontend.md  index.md  install.md  library.md  style.css
frontend/: index.html
haddock/: Recalc-Engine-Core.html  Recalc-Engine.html  Recalc-Repl.html  Recalc-Semantics.html  Recalc-Server-Protocol.html  Recalc-Server.html  Recalc-Syntax-Fixity.html  Recalc-Syntax-Parser.html  Recalc-Syntax-Term.html  doc-index-58.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-J.html  doc-index-K.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  doc-index-W.html  doc-index.html  doc-index.json  index.html  recalc.haddock  recalc.txt
haddock/CHANGELOG/: index.html
haddock/recalc/: Recalc-Language.html  doc-index.html  doc-index.json  index.html  recalc.haddock
haddock/recalc-engine/: Recalc-Engine.html  Recalc-Repl.html  doc-index.html  doc-index.json  index.html  recalc-engine.haddock
haddock/recalc-engine/recalc-engine-spec/: Main.html  Recalc-EngineSpec.html  doc-index.html  doc-index.json  index.html  recalc-engine.haddock
haddock/recalc-engine/src/: Recalc.Engine.Core.html  Recalc.Engine.DependencyMap.html  Recalc.Engine.html  Recalc.Repl.html
haddock/recalc-server/: Recalc-Server.html  doc-index.html  doc-index.json  index.html  recalc-server.haddock
haddock/recalc-server/src/: Recalc.Server.Generic.html  Recalc.Server.Json.html  Recalc.Server.Types.html  Recalc.Server.html
haddock/recalc-univer/: Recalc-Univer-Protocol.html  Recalc-Univer.html  doc-index.html  doc-index.json  index.html  recalc-univer.haddock
haddock/recalc-univer/src/: Recalc.Univer.Internal.html  Recalc.Univer.Protocol.html  Recalc.Univer.html
haddock/recalc/CHANGELOG/: index.html
haddock/recalc/recalc-spec/: Main.html  Recalc-Array.html  Recalc-ArraySpec.html  Recalc-Language.html  Recalc-SemanticsSpec.html  Recalc-Syntax-Arbitrary.html  Recalc-Syntax-Fixity.html  Recalc-Syntax-FixitySpec.html  Recalc-Syntax-Parser.html  Recalc-Syntax-ParserSpec.html  Recalc-Syntax-Term.html  Recalc-Syntax-Test.html  Recalc-Syntax-Unify.html  Recalc-Syntax-UnifySpec.html  doc-index-58.html  doc-index-A.html  doc-index-All.html  doc-index-B.html  doc-index-C.html  doc-index-D.html  doc-index-E.html  doc-index-F.html  doc-index-G.html  doc-index-H.html  doc-index-I.html  doc-index-K.html  doc-index-L.html  doc-index-M.html  doc-index-N.html  doc-index-O.html  doc-index-P.html  doc-index-Q.html  doc-index-R.html  doc-index-S.html  doc-index-T.html  doc-index-U.html  doc-index-V.html  doc-index.html  doc-index.json  index.html  (+1 more)
haddock/recalc/src/: Recalc.Array.html  (+5 more)
haddock/src/: Recalc.Engine.Core.html  Recalc.Engine.DependencyMap.html  Recalc.Engine.DocumentStore.html  Recalc.Engine.Language.html  Recalc.Engine.Monad.html  Recalc.Engine.html  Recalc.Repl.html  Recalc.Semantics.html  Recalc.Server.Generic.html  Recalc.Server.Json.html  Recalc.Server.Protocol.html  Recalc.Server.Types.html  Recalc.Server.html  Recalc.Syntax.Fixity.html  Recalc.Syntax.Parser.html  Recalc.Syntax.Term.html
install/: index.html
lib/Recalc/: Array.hs  Engine.hs  Errors.hs  Language.hs  Repl.hs  Semantics.hs  Server.hs
recalc-engine/: recalc-engine.cabal
recalc-engine/lib/Recalc/: Engine.hs  Repl.hs
recalc-engine/lib/Recalc/Engine/: Core.hs  DependencyMap.hs
recalc-engine/spec/Recalc/: EngineSpec.hs
recalc-server/: recalc-server.cabal
recalc-server/lib/Recalc/: Server.hs
recalc-server/lib/Recalc/Server/: Generic.hs  Types.hs
recalc-univer/: recalc-univer.cabal
recalc-univer/lib/Recalc/: Univer.hs
recalc-univer/lib/Recalc/Univer/: Internal.hs  Protocol.hs
recalc-univer/src/: Main.hs
recalc-vscode/: .gitignore  .vscodeignore  CHANGELOG.md  LICENSE  README.md  esbuild.mjs  eslint.config.js  example.rc  package-lock.json  package.json  recalc-ts-defs.cabal  tsconfig.json
recalc-vscode/hs/Recalc/Server/: TH.hs  TypeScript.hs
recalc-vscode/media/: index.css
recalc-vscode/src/: files.ts  parser.ts
recalc-vscode/src/common/: messages.d.ts
recalc-vscode/src/extension/: customEditor.ts  extension.ts  logging.ts  spreadsheet-editor.ts
recalc-vscode/src/frontend/: external.d.ts  index.ts  locales.ts  plugin.ts  rpc.ts
recalc-vscode/src/frontend/commands/commands/: sheet-function.command.ts
recalc-vscode/src/frontend/controllers/: hover.controller.ts  menu.controller.ts  rpc.controller.ts
recalc-vscode/src/frontend/controllers/menu/: sheet-function-menu.controller.ts
recalc-vscode/src/frontend/services/: function-description.service.ts
recalc-vscode/src/frontend/views/components/: ParseInput.tsx  RangeSelector.tsx  SheetFunctionIcon.tsx
recalc-vscode/src/frontend/views/extensions/: cell-diagnostics.css  cell-diagnostics.render.ts
recalc-vscode/src/frontend/views/sheet-function/: SheetFunctionContainer.css  SheetFunctionContainer.tsx
recalc-vscode/src/frontend/views/sheet-function/hooks/: useActiveWorksheet.ts  useColor.ts  useSidebar.ts
recalc-vscode/src/rpc/: client.ts  logging.ts
recalc-vscode/src/test/: files.test.ts  logging.ts  test.ts
recalc-vscode/src/test/rpc/: client.test.ts  semaphore.ts
scripts/: version-check.sh
search/: search_index.json
spec/: README.md
spec/Recalc/: ArraySpec.hs  EngineSpec.hs  SemanticsSpec.hs
src/: Main.hs
src-ts/: Main.hs
src/server/: List_add.hs  Main.hs
src/ts/: Main.hs
(+47 files in other folders)
