cabal-version:      3.0
name:               recalc
version:            0.4.2.0
synopsis:           functional spreadsheet programming
-- description:
license:            MIT
license-file:       LICENSE
author:             b4er
maintainer:         basil.fuerer@protonmail.com
category:           Language
build-type:         Simple

extra-doc-files:
    CHANGELOG.md
    README.md

common common
    ghc-options: -Wall
    -- ghc-options: -Wall -Werror -fno-warn-missing-home-modules

    build-depends:
        base ^>= 4.18.2.1,
        containers,
        megaparsec,
        mtl,
        text

    default-language:   GHC2021
    default-extensions: LambdaCase RecordWildCards

library recalc-engine
    -- | Spreadsheet recalculation engine.
    import:         common
    hs-source-dirs: lib/engine

    exposed-modules:
        Recalc.Engine

    other-modules:
        Recalc.Engine.DependencyMap
        Recalc.Engine.DocumentStore
        Recalc.Engine.Language
        Recalc.Engine.Monad

    build-depends:
        build,
        network-uri,
        parser-combinators,
        prettyprinter

library recalc-lang
    -- | Dependently typed lambda calculus implementation.
    import:         common
    hs-source-dirs: lib/lang

    exposed-modules:
        Recalc.Syntax.Fixity
        Recalc.Syntax.Parser
        Recalc.Syntax.Term

    build-depends:
        build,
        network-uri,
        parser-combinators,
        prettyprinter,
        recalc-engine

library recalc-server
    -- | Generic language server and protocol definition.
    import:         common
    hs-source-dirs: lib/server

    exposed-modules:
        Recalc.Server
        Recalc.Server.Protocol

    other-modules:
        Recalc.Server.Generic
        Recalc.Server.Json

    build-depends:
        aeson >= 2.2.0.0,
        bytestring,
        network-uri,
        recalc-lang,
        recalc-engine,
        stm

executable recalc-server-exe
    -- | Implement the protocol specification from protocol definition (recalc-server).
    import:         common
    hs-source-dirs: src/server

    main-is:        Main.hs

    build-depends:
        aeson >= 2.2.0.0,
        recalc-server

executable recalc-ts-defs
    -- | TypeScript code generation (RPC type definitions).
    import:         common
    hs-source-dirs: src/ts

    main-is:        Main.hs

    other-modules:
        Recalc.Server.TypeScript

    build-depends:
        recalc-server,
        aeson-typescript,
        network-uri,
        template-haskell

test-suite recalc-spec
    -- | Full test-suite for all libraries.
    import:             common

    type:               exitcode-stdio-1.0
    hs-source-dirs:     spec
    main-is:            Spec.hs
    build-tool-depends: hspec-discover:hspec-discover == 2.*

    other-modules:
        Recalc.EngineSpec
        Recalc.Syntax.FixitySpec
        Recalc.Syntax.ParserSpec
        Recalc.Syntax.Test

    build-depends:
        hspec >= 2.7,
        hspec-megaparsec,
        QuickCheck,
        network-uri,
        prettyprinter,
        recalc-engine,
        recalc-lang
