cabal-version:      3.0
name:               recalc
version:            0.7.0.0
synopsis:           functional spreadsheet programming
-- description:
license:            MIT
license-file:       LICENSE
author:             b4er
maintainer:         basil.fuerer@protonmail.com
category:           Language
build-type:         Simple

extra-doc-files:
    CHANGELOG.md
    README.md

common common
    ghc-options: -Wall

    build-depends:
        aeson >= 2.2.0.0,
        base,
        containers,
        megaparsec,
        mtl,
        network-uri,
        prettyprinter,
        text

    default-language:   GHC2021
    default-extensions: LambdaCase RecordWildCards

library
    -- | spreadsheet engine, language syntax & semantics,
    -- json-rpc implementation.
    import:         common
    hs-source-dirs: lib

    exposed-modules:
        Recalc.Engine
        Recalc.Semantics
        Recalc.Server
        Recalc.Server.Protocol
        Recalc.Syntax.Fixity
        Recalc.Syntax.Parser
        Recalc.Syntax.Term

    other-modules:
        Recalc.Engine.DependencyMap
        Recalc.Engine.DocumentStore
        Recalc.Engine.Language
        Recalc.Engine.Monad
        Recalc.Server.Generic
        Recalc.Server.Json
        Recalc.Server.Types

    build-depends:
        build,
        bytestring,
        parser-combinators,
        stm

executable recalc-server
    -- | Json-rpc server exectuable.
    import:         common
    hs-source-dirs: src/server

    main-is:        Main.hs

    other-modules:  List_add

    build-depends:  recalc

test-suite recalc-spec
    -- | Full test-suite for all libraries.
    import:             common

    type:               exitcode-stdio-1.0
    hs-source-dirs:     spec
    main-is:            Spec.hs
    build-tool-depends: hspec-discover:hspec-discover == 2.*

    other-modules:
        Recalc.EngineSpec
        Recalc.SemanticsSpec
        Recalc.Syntax.FixitySpec
        Recalc.Syntax.ParserSpec
        Recalc.Syntax.Arbitrary
        Recalc.Syntax.Test

    build-depends:
        hspec >= 2.7,
        hspec-megaparsec,
        QuickCheck,
        recalc
