cabal-version:      3.0
name:               recalc
version:            0.9.4.0
synopsis:           functional spreadsheet programming
description:        A functional programming language embedded in a spreadsheet environment.
license:            MIT
license-file:       LICENSE
author:             b4er
maintainer:         basil.fuerer@protonmail.com
category:           Language
build-type:         Simple

extra-doc-files:
  CHANGELOG.md
  README.md

common common
  ghc-options: -Wall -Werror

  default-language:   GHC2021
  default-extensions: LambdaCase RecordWildCards

library
  import:         common
  hs-source-dirs: lib

  exposed-modules:
    Recalc.Language

  other-modules:
    Recalc.Array
    Recalc.Syntax.Fixity
    Recalc.Syntax.Parser
    Recalc.Syntax.Term
    Recalc.Syntax.Unify

  build-depends:
    base,
    containers,
    hmatrix,
    megaparsec,
    mtl,
    network-uri,
    orthotope,
    parser-combinators,
    prettyprinter,
    recalc-engine,
    recalc-server,
    recalc-univer,
    text

executable recalc-server
  import:         common
  hs-source-dirs: src

  main-is:        Main.hs

  build-depends:
    base,
    recalc,
    recalc-univer

test-suite recalc-spec
  -- | Full test-suite for all libraries
  import:             common

  type:               exitcode-stdio-1.0
  hs-source-dirs:     spec, lib
  main-is:            Spec.hs
  build-tool-depends: hspec-discover:hspec-discover == 2.*

  other-modules:
    Recalc.ArraySpec
    Recalc.SemanticsSpec
    Recalc.Syntax.Arbitrary
    Recalc.Syntax.FixitySpec
    Recalc.Syntax.ParserSpec
    Recalc.Syntax.Test
    Recalc.Syntax.UnifySpec

    Recalc.Array
    Recalc.Language
    Recalc.Syntax.Fixity
    Recalc.Syntax.Parser
    Recalc.Syntax.Term
    Recalc.Syntax.Unify

  build-depends:
    base,
    containers,
    hmatrix,
    hspec >= 2.7,
    hspec-megaparsec,
    megaparsec,
    mtl,
    network-uri,
    orthotope,
    parser-combinators,
    prettyprinter,
    QuickCheck,
    recalc,
    recalc-engine,
    recalc-server,
    recalc-univer,
    text
