cabal-version:      3.0
name:               recalc-univer
version:            0.9.2.0
synopsis:           Serve a JSON-RPC backend that talks to Univer.
description:        Library to serve a Univer backend for arbitrary languages that implement the Recalc interface.
license:            MIT
--license-file:       ../LICENSE
author:             b4er
maintainer:         basil.fuerer@protonmail.com
category:           Language
build-type:         Simple

flag disable-exe
  description: Make the executable not buildable when set.
  default: False
  manual: True

common common
  default-language:    GHC2021
  default-extensions:  LambdaCase, RecordWildCards

  ghc-options:         -Wall -Werror

library
  import: common

  hs-source-dirs: lib

  exposed-modules:
    Recalc.Univer
    Recalc.Univer.Protocol

  other-modules:
    Recalc.Univer.Internal

  build-depends:
    aeson,
    base,
    recalc-engine,
    containers,
    megaparsec,
    mtl,
    network-uri,
    prettyprinter,
    recalc-server,
    text

executable recalc-ts-defs
    import:         common
    hs-source-dirs: src

    main-is:        Main.hs

    other-modules:
      Recalc.Server.TH
      Recalc.Server.TypeScript

    build-depends:
      aeson,
      aeson-typescript,
      base,
      containers,
      network-uri,
      recalc-server,
      recalc-univer,
      template-haskell,
      text

    if flag(disable-exe)
      buildable: False
    else
      buildable: True

test-suite recalc-univer-spec
    import:             common

    type:               exitcode-stdio-1.0
    hs-source-dirs:     spec, lib
    main-is:            Spec.hs
    build-tool-depends: hspec-discover:hspec-discover == 2.*

    --other-modules:

    build-depends:
      hspec >= 2.7,
      recalc-server
