cabal-version:      3.0
name:               recalc-ts-defs
version:            0.7.9.1
synopsis:           functional spreadsheet programming
-- description:
license:            MIT
license-file:       LICENSE
author:             b4er
maintainer:         basil.fuerer@protonmail.com
category:           Language
build-type:         Simple

executable recalc-ts-defs
    -- | TypeScript code generation (RPC type definitions),
    -- separated out since TH has issues when building statically.
    hs-source-dirs:     hs
    ghc-options:        -Wall
    default-language:   GHC2021
    default-extensions: LambdaCase RecordWildCards

    main-is: Main.hs

    other-modules:
        Recalc.Server.TH
        Recalc.Server.TypeScript

    build-depends:
        aeson >= 2.2.0.0,
        aeson-typescript,
        base,
        containers,
        megaparsec,
        mtl,
        network-uri,
        prettyprinter,
        recalc,
        template-haskell,
        text
